<resources>
    <string name="app_name">Chrono12</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">"Already have an account? "</string>
    <string name="log_in">Log In</string>
    <string name="you_are_not_logged_in">You are not logged in</string>
    <string name="don_t_have_an_account">"Don\'t have an account? "</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_name">Category Name</string>
    <string name="category_image">Category image</string>
    <string name="CurrentPriceEx">₹1000</string>
    <string name="originalPriceEx"><strike>₹2000</strike></string>
    <string name="OfferPercentEx">50% Off</string>
    <string name="StockAlertEx">Only 1 left in stock - Order soon.</string>
    <string name="content">Content</string>
    <string name="detail">Detail</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="in_cart">In Cart</string>
    <string name="out_of_stock1">Out of Stock</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="product_name">Product Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="product_details">Product Details</string>
    <string name="top_rated_watches">Top Rated Watches</string>
    <string name="brands">Brands</string>
    <string name="categories">Categories</string>
    <string name="user_pref">User_Preference</string>
    <string name="user_id">User_Id</string>
    <string name="no_result_found">No results found !\nTry searching with more relevant words...</string>
    <string name="search_prompt_msg">Search something</string>
    <string name="notification_id">Notification_Id</string>
    <string name="bulk_order_id">Bulk_Order_Id</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_type">Sort_Type</string>
    <string name="sort_button_text">Sort (%s)</string>
    <string name="filter_button_text">Filter (%d)</string>
    <string name="filter">Filter</string>
    <string name="product_count">%d Products</string>
    <string name="price_high_to_low">Price - High to Low</string>
    <string name="price_low_to_high">Price - Low to High</string>
    <string name="rating_high_to_low">Rating - High to Low</string>
    <string name="rating_low_to_high">Rating - Low to High</string>
    <string name="price_detail">Price (%d item)</string>
    <string name="price">₹%d</string>
    <string name="discount_price">-₹%d</string>
    <string name="total_price">Total Price : ₹%d</string>
    <string name="no_of_products">No. of Products : %d</string>
    <string name="date_time">Date Time : %s</string>
    <string name="order_id">Order Id : %d</string>
    <string name="bulk_ord_id">Bulk Order Id : %d</string>
    <string name="password_doesnt_match">Password does not match</string>
    <string name="password_min_character">Password must be between 8 and 16 characters</string>
    <string name="not_a_mobile">Invalid mobile number</string>
    <string name="invalid_state_name">Invalid state name</string>
    <string name="not_an_email">Invalid email address</string>
    <string name="field_cant_be_empty">This field can\'t be empty</string>
    <string name="address_group_name_already_exists">Address group name already exists</string>
    <string name="to_use_this_feature_you_need_to_allow_chrono12_to_access_your_camera_and_storage_you_can_update_this_permission_is_settings">To use this feature, you need to allow Chrono12 to access your CAMERA and STORAGE. You can update this permission in Settings</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="to_use_this_feature_you_need_to_allow_chrono12_to_access_your_storage_you_can_update_this_permission_in_settings">To use this feature, you need to allow Chrono12 to access your STORAGE. You can update this permission in Settings</string>
    <string name="no_internet">No Internet Connection. Product images may not load properly.</string>
    <string name="internet_is_back">Internet Connection Available. Images will be loaded soon.</string>
    <string name="okay">Okay</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="address_group">Address Group</string>
    <string name="edit_group_name">Edit Group Name</string>
    <string name="all_address_added">Looks like you have\n added all existing addresses\n to this group</string>
    <string name="no_address_found">Looks like you haven\'t\n added any address yet</string>
    <string name="out_of_stock">Currently out of stock</string>
    <string name="order_soon">Only %d left in stock - Order soon.</string>
    <string name="offer_percentage">%d%% Off</string>
    <string name="product_is_added_to_wishlist">Product added to Wishlist</string>
    <string name="product_is_removed_from_wishlist">Product removed from Wishlist</string>
    <string name="remove_item">Remove Product</string>
    <string name="wishlist_item_remove_alert">Are you sure you want to Remove this product from Wishlist?</string>
    <string name="cart_item_remove_alert">Are you sure you want to Remove this product from Cart?</string>
    <string name="remove_address">Remove Address</string>
    <string name="address_item_remove_alert">Are you sure you want to remove this Address?</string>
    <string name="address_item_delete_alert_title">Are you sure you want to delete this Address?</string>
    <string name="address_item_delete_alert_msg">Deleting a address will result in removing the same from all address groups</string>
    <string name="delete_address_group">Delete Address Group</string>
    <string name="delete">Delete</string>
    <string name="address_group_delete_alert">Are you sure you want to delete this Address group?</string>
    <string name="remove">Remove</string>
    <string name="default_group_name">Default</string>
    <string name="addresses">%d Addresses</string>
    <string name="max_units_reached">Max 5 units only</string>
    <string name="only_units_left">Only %d units left</string>
    <string name="order_confirmation_product_quantity_error_msg">%s\nRequired quantity: %d\nAvailable quantity: %d</string>
    <string name="order_confirmation_error_suggestion">\nKindly go back and make changes in the product quantity or address group to continue</string>
    <string name="number_of_products_per_order">Number of Products Per Order : %d</string>
    <string name="total_number_of_products">Total Number of Products : %d</string>
    <string name="number_of_products">Number of Products : %d</string>
    <string name="remove_suggestion">Remove from Suggestion History?</string>
    <string name="remove_profile_picture">Remove profile picture</string>
    <string name="remove_profile_picture_alert">Are you sure you want to remove this profile picture?</string>
    <string name="delete_search_history">Delete Search History</string>
    <string name="delete_search_history_alert">Are you sure you want to delete search history?</string>
    <string name="log_out">Log out</string>
    <string name="log_out_alert">Are you sure you want to log out?</string>
    <string name="view_order">View Order</string>
    <string name="add_address_group">Add address group</string>
    <string name="select_address_group">Select Address Group</string>
    <string name="no_address_group_found">No Address Group Found</string>
    <string name="looks_like_you_haven_t_added_n_any_address_group_yet">Looks like you haven\'t added\n any address group yet</string>
    <string name="empty_address_image">Empty address image</string>
    <string name="add_address">Add address</string>
    <string name="select_address">Select Address</string>
    <string name="empty_address_group_image">Empty address group image</string>
    <string name="no_address">No Address Found</string>
    <string name="looks_like_you_haven_t_n_added_any_address_yet">Looks like you haven\'t\n added any address yet</string>
    <string name="looks_like_you_haven_t_n_added_any_address_to_this_group">Looks like you haven\'t added\n any address to this group</string>
    <string name="address_title">Address (%d)</string>
    <string name="address">Address</string>
    <string name="address_group_title">Address Group (%d)</string>
    <string name="order_history_title">Order History (%d)</string>
    <string name="cart_title">Cart (%d)</string>
    <string name="wishlist_title">Wishlist (%d)</string>
    <string name="wishlist">Wishlist</string>

    //Indian states
    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
</resources>