<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Animation.Design.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/padding_large"
    android:paddingEnd="@dimen/padding_large"
    android:paddingTop="@dimen/padding_large"
    tools:context=".ui.fragment.dialog.SortDialog">

    <TextView
        android:id="@+id/tvSortBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:text="@string/sort_by"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider15"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:theme="@style/Widget.Material3.MaterialDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSortBy" />

    <RadioGroup
        android:id="@+id/rgSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layoutDirection="rtl"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider15">

        <RadioButton
            android:id="@+id/rbPriceHighToLow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_small"
            android:buttonTint="@color/primaryDarkColor"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/price_high_to_low" />

        <RadioButton
            android:id="@+id/rbPriceLowToHigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_small"
            android:buttonTint="@color/primaryDarkColor"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/price_low_to_high" />

        <RadioButton
            android:id="@+id/rbRatingHighToLow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_small"
            android:buttonTint="@color/primaryDarkColor"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/rating_high_to_low" />

        <RadioButton
            android:id="@+id/rbRatingLowToHigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_small"
            android:buttonTint="@color/primaryDarkColor"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/rating_low_to_high" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>